--- a/app/src/main/res/layout/conventions_portrait.xml
+++ b/app/src/main/res/layout/conventions_portrait.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CharacterListActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/convention_layout">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -28,19 +27,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:id="@+id/character_recyclerview" />
+        android:id="@+id/convention_recyclerview" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/add_character_fab"
+        android:id="@+id/add_convention_fab"
         android:src="@drawable/ic_add"
         app:fabSize="auto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
         android:layout_margin="16dp"
-        app:layout_anchor="@id/character_recyclerview"
         app:layout_anchorGravity="bottom|right|end"
-        app:backgroundTint="@color/magenta"
+        app:backgroundTint="@color/cerulean"
         app:elevation="5dp"/>
 
 </android.support.design.widget.CoordinatorLayout>
