--- a/app/src/main/res/layout/character_details.xml
+++ b/app/src/main/res/layout/character_details.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<LinearLayout
+    android:id="@+id/details_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CharacterListActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".CharacterDetailsActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -24,23 +25,50 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:id="@+id/character_recyclerview" />
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/details_character_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Elements for Cosplay"
+            android:textSize="30dp"
+            android:layout_marginTop="5dp"
+            android:textStyle="bold"
+            android:layout_marginLeft="10dp">
+
+        </TextView>
+
+    </RelativeLayout>
+
+    <android.support.design.widget.CoordinatorLayout
+    android:layout_width="match_parent"
+    android:layout_height="fill_parent">
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/details_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:layout_margin="10dp">
+
+    </android.support.v7.widget.RecyclerView>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/add_character_fab"
+        android:id="@+id/details_add_element_fab"
         android:src="@drawable/ic_add"
         app:fabSize="auto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
         android:layout_margin="16dp"
-        app:layout_anchor="@id/character_recyclerview"
+        app:layout_anchor="@id/details_recyclerview"
         app:layout_anchorGravity="bottom|right|end"
-        app:backgroundTint="@color/magenta"
+        app:backgroundTint="@color/yellow"
         app:elevation="5dp"/>
 
-</android.support.design.widget.CoordinatorLayout>
+    </android.support.design.widget.CoordinatorLayout>
+
+
+</LinearLayout>
